{
  "version": 4,
  "terraform_version": "0.12.31",
  "serial": 14,
  "lineage": "2f211852-1b60-6e11-f1f4-f90244de8895",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fe94dee086c0c37",
            "arn": "arn:aws:ec2:us-east-1:993161815091:instance/i-0a4a2ff797355384c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-local-sandbox-ec2-profile",
            "id": "i-0a4a2ff797355384c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8s_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08147ad3a39ee538d",
            "private_dns": "ip-10-0-1-152.ec2.internal",
            "private_ip": "10.0.1.152",
            "public_dns": "ec2-52-87-178-36.compute-1.amazonaws.com",
            "public_ip": "52.87.178.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f3366bb2a2f9c50",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001e354050fd30c1a",
            "tags": {
              "Name": "k8s-local-sandbox-controller-tf"
            },
            "tags_all": {
              "Name": "k8s-local-sandbox-controller-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03fde51c34b92dd3a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.iam-profile",
            "aws_iam_role.iam-role",
            "aws_key_pair.k8s_key",
            "aws_security_group.ssh-allowed",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993161815091:internet-gateway/igw-07117281b55576921",
            "id": "igw-07117281b55576921",
            "owner_id": "993161815091",
            "tags": {
              "Name": "k8s-local-igw"
            },
            "tags_all": {
              "Name": "k8s-local-igw"
            },
            "vpc_id": "vpc-0939d17facb2fa554"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993161815091:route-table/rtb-09851b404547b61c5",
            "id": "rtb-09851b404547b61c5",
            "owner_id": "993161815091",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07117281b55576921",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-local-rt"
            },
            "tags_all": {
              "Name": "k8s-local-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0939d17facb2fa554"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5a2f3bc3d6ba635",
            "route_table_id": "rtb-09851b404547b61c5",
            "subnet_id": "subnet-001e354050fd30c1a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993161815091:security-group/sg-03fde51c34b92dd3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fde51c34b92dd3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220610055804759900000003",
            "name_prefix": "terraform-",
            "owner_id": "993161815091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh allowed"
            },
            "tags_all": {
              "Name": "ssh allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0939d17facb2fa554"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993161815091:subnet/subnet-001e354050fd30c1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001e354050fd30c1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993161815091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-local-public-sbunet"
            },
            "tags_all": {
              "Name": "k8s-local-public-sbunet"
            },
            "vpc_id": "vpc-0939d17facb2fa554"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993161815091:vpc/vpc-0939d17facb2fa554",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-028a8b3ec877dae57",
            "default_route_table_id": "rtb-0e1d68b2f293cff6f",
            "default_security_group_id": "sg-02f75647375784ea1",
            "dhcp_options_id": "dopt-0853680f788e7dadb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0939d17facb2fa554",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e1d68b2f293cff6f",
            "owner_id": "993161815091",
            "tags": {
              "Name": "k8s-local-vpc"
            },
            "tags_all": {
              "Name": "k8s-local-vpc"
            }
          }
        }
      ]
    }
  ]
}